updating login and serving of react app